--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Paint</title>
     </head>
     <body>
+        <canvas id="jsCanvas" class="canvas"></canvas>
         <script src="app.js"></script>
     </body>
 </html>
